[tool.poetry]
name = "cgn-ec"
version = "0.1.0"
description = "Python Client library to interact with cgn-ec-pro API"
authors = ["CGN Support <cgn-support@veesix-networks.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
